--- a/index.html
+++ b/index.html
@@ -19,38 +19,36 @@
     </header>
     <main>
         <section id="js-section-intro" class="active">
-            <h1> coding quiz challenge</h1>
-            <p>Answer the code related questions in the quiz within the time limit.For every wrong answer 10 seconds will be deducted from the timer. Good luck</p>
+            <h1> Coding Quiz Challenge</h1>
+            <p>Answer the code related questions in the quiz within the time limit.</p>
+            <p> every wrong answer 10 seconds will be deducted from the timer.</p>
+            <p>  Good luck! </p>
             <button id="js-quiz-start" class="button button--primary">Start Quiz</button>
         </section>
+        <!-- Start Highscores -->
+        <section id ="js-section-highscore-input" class="phase-enter-intials"></section>
+        <!-- End Highscores -->
+
+        <!--Start: Leaderboard-->
+        <section id="js-section-leaderboard"></section>
+        <h1>Highscores</h1>
+        <div class="Highscores-list"></div>
+        <div class="highscore-actions">
+            <button class="highscore-actions_back button button_primary">Go back</button>
+            <button class="highscore-actions_clear button button_primary">Clear highscores</button>
+        </div>
+        </section>
+        <!--End Leaderboard-->
+
+        <!-- Start: Questions inputs-->
+        <div id="js-sections-questions" class="sections">
+        <div id="questions"></div>
+        </div>
+        <!--End: Questions Inputs-->
     </main>
+    <script src="/Assets/script.js"></script>
+    <script src="/Assets/questions.js"></script>
+
 </body>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 </html>
