--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/Assets/style.css">
+    <link rel="stylesheet" href="./Assets/style.css">
     <title>Javascript Quiz Challenge</title>
 </head>
 
@@ -49,8 +49,8 @@
         </div>
         <!-- END: QUESTION INPUTS -->
     </main>
-    <script src="/Assets/script.js"></script>
-    <script src="/questions.js"></script>
+    <script src="./Assets/script.js"></script>
+    <script src="./questions.js"></script>
   
 </body>
 
